--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,4 +14,12 @@
         android:textSize="24sp"
         android:layout_centerInParent="true" />
 
+    <ImageView
+        android:id="@+id/tankImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/tank_active"
+        android:layout_marginTop="16dp"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
